--- a/src/index.html
+++ b/src/index.html
@@ -211,19 +211,19 @@
         <h2>联系方式</h2>
         <div class="detail contact">
           <div class="item">
-            <svg xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#icon-phone"></use></svg>
+            <svg xmlns:xlink="http://www.w3.org/1999/xlink"><use href="#icon-phone"></use></svg>
             <span>13530329775</span>
           </div>
           <div class="item">
-            <svg xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#icon-email"></use></svg>
+            <svg xmlns:xlink="http://www.w3.org/1999/xlink"><use href="#icon-email"></use></svg>
             <span>1308877027@qq.com</span>
           </div>
           <div class="item">
-            <svg xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#icon-wechat"></use></svg>
+            <svg xmlns:xlink="http://www.w3.org/1999/xlink"><use href="#icon-wechat"></use></svg>
             <span>LIU99819981</span>
           </div>
           <div class="item">
-            <svg xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#icon-city"></use></svg>
+            <svg xmlns:xlink="http://www.w3.org/1999/xlink"><use href="#icon-city"></use></svg>
             <span>深圳</span>
           </div>
 
